--- a/search.html
+++ b/search.html
@@ -23,6 +23,6 @@
     </dl>
   </div>
   <div id="back">
-    <a href="./index.html">→ back</a>
+    <!--a href="./index.html">→ back</a-->
   </div>
 </body>
