file to updata 201602071613

--- a/mapping.html
+++ b/mapping.html
@@ -21,7 +21,7 @@
     start_func();
   </script>
   <div id="back">
-    <a href="./index.html">→ back</a>
+    <!--a href="./index.html">→ back</a-->
   </div>
 </body>
 
