--- a/mapping.html
+++ b/mapping.html
@@ -10,7 +10,7 @@
 
   <script type="text/javascript" src="./js/jquery-1.10.2.min.js"></script>
   <script type="text/javascript" src="./js/jquery.csv.js"></script>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
+  <script type="text/javascript" src="https://maps.google.com/maps/api/js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqAed4pTyD5n2cg8trIgajq7TyHgqL6tA&signed_in=true&callback=initMap" async defer></script>
   <script type="text/javascript" src="./js/mapping.js"></script>
 </head>
