--- a/mapping.html
+++ b/mapping.html
@@ -2,27 +2,23 @@
 <html>
 
 <head>
-  <title>Shimasho × FilmSupportShimada location map</title>
-  <meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="./css/mapping.css">
+    <title>Shimasho × FilmSupportShimada location map</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="./css/mapping.css">
 
-  <script type="text/javascript" src="./js/jquery-1.10.2.min.js"></script>
-  <script type="text/javascript" src="./js/jquery.csv.js"></script>
-  <script type="text/javascript" src="https://maps.google.com/maps/api/js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqAed4pTyD5n2cg8trIgajq7TyHgqL6tA&signed_in=true&callback=initMap" async defer></script>
-  <script type="text/javascript" src="./js/mapping.js"></script>
+    <script type="text/javascript" src="./js/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="./js/jquery.csv.js"></script>
+    <script type="text/javascript" src="./js/mapping.js"></script>
 </head>
 
-<body onLoad="drop()">
-  <div id="map"></div>
-  <script>
-    start_func();
-  </script>
-  <div id="back">
-    <!--a href="./index.html">→ back</a-->
-  </div>
+<body>
+    <div id="map"></div>
+    <div id="back">
+        <!--a href="./index.html">→ back</a-->
+    </div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqAed4pTyD5n2cg8trIgajq7TyHgqL6tA&signed_in=true&callback=initMap" async defer></script>
 </body>
 
 </html>
