--- a/search.html
+++ b/search.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 
 <head>
-  <title>Shimasho × FilmSupportShimada</title>
-  <meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="./css/search.css">
-  <script type="text/javascript" src="./js/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="./js/search.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="vierport" content="initial-scale=1.0, user-scalable=no" />
+    <script type="text/javascript" src="./js/jquery-3.1.0.min.js"></script>
+    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/bootstrap-theme.min.css">
+    <script src="./js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+    <script src="./js/film.js"></script>
+    <link rel="stylesheet" href="./css/film.css">
 </head>
 
 <body>
-  <div id="menu">
-    <dl id="acMenu">
-      <dt>アコーディオンメニュー1</dt>
-      <dd>アコーディオンメニューが開く。</dd>
-      <dt>アコーディオンメニュー2</dt>
-      <dd>アコーディオンメニューが開く。</dd>
-      <dt>アコーディオンメニュー3</dt>
-      <dd>アコーディオンメニューが開く。</dd>
-    </dl>
-  </div>
-  <div id="back">
-    <!--a href="./index.html">→ back</a-->
-  </div>
+    <div id="map_canvas"></div>
+    <!-- <div id="mapList">aaa</div> -->
 </body>
+
+</html>
