change file name

--- a/mapping.html
+++ b/mapping.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 
 <head>
-    <title>Shimasho × FilmSupportShimada location map</title>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="./css/mapping.css">
-
-    <script type="text/javascript" src="./js/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="./js/jquery.csv.js"></script>
-    <script type="text/javascript" src="./js/mapping.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="vierport" content="initial-scale=1.0, user-scalable=no" />
+    <script type="text/javascript" src="./js/jquery-3.1.0.min.js"></script>
+    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/bootstrap-theme.min.css">
+    <script src="./js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+    <script src="./js/mapping.js"></script>
+    <link rel="stylesheet" href="./css/film.css">
 </head>
 
 <body>
-    <div id="map"></div>
-    <div id="back">
-        <!--a href="./index.html">→ back</a-->
-    </div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqAed4pTyD5n2cg8trIgajq7TyHgqL6tA&signed_in=true&callback=initMap" async defer></script>
+    <div id="map_canvas"></div>
+    <!-- <div id="mapList">aaa</div> -->
 </body>
 
 </html>
